Add check of shipment origins in generate_edi

--- a/locale/es.po
+++ b/locale/es.po
@@ -2,6 +2,12 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
+msgctxt "model:ir.message,text:msg_no_unique_edi"
+msgid "Shipment \"%(number)s\" from EDI sale cannot have more that 1 origin."
+msgstr ""
+"El albarán \"%(number)s\" originado por una venta EDI no puede tener más de "
+"un origen "
+
 msgctxt "model:ir.model.button,string:generate_edi_file"
 msgid "Generate EDI"
 msgstr "Generar EDI"
