--- a/locale/ca.po
+++ b/locale/ca.po
@@ -2,6 +2,12 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
+msgctxt "model:ir.message,text:msg_no_unique_edi"
+msgid "Shipment \"%(number)s\" from EDI sale cannot have more that 1 origin."
+msgstr ""
+"L'albarà \"%(number)s\" amb origen d'una venda EDI no pot tenir més d'un "
+"origen"
+
 msgctxt "model:ir.model.button,string:generate_edi_file"
 msgid "Generate EDI"
 msgstr "Generar EDI"
