--- a/locale/ca.po
+++ b/locale/ca.po
@@ -16,6 +16,10 @@ msgstr ""
 "L'albarà \"%(number)s\" amb origen d'una venda EDI no pot tenir més d'un "
 "origen"
 
+msgctxt "model:ir.message,text:msg_send_edi_shipment"
+msgid "The shipment %(shipment)s will be processed and sended the EDI file."
+msgstr "De l'albarà %(shipment)s serà processat i enviat el fitxer EDI."
+
 msgctxt "model:ir.model.button,string:generate_edi_file"
 msgid "Generate EDI"
 msgstr "Generar EDI"
