--- a/locale/es.po
+++ b/locale/es.po
@@ -16,6 +16,10 @@ msgstr ""
 "El albarán \"%(number)s\" originado por una venta EDI no puede tener más de "
 "un origen "
 
+msgctxt "model:ir.message,text:msg_send_edi_shipment"
+msgid "The shipment %(shipment)s will be processed and sended the EDI file."
+msgstr "De l'albarán %(shipment)s será procesado i enviado el fichero EDI."
+
 msgctxt "model:ir.model.button,string:generate_edi_file"
 msgid "Generate EDI"
 msgstr "Generar EDI"
